<resources>
    <string name="app_name">ALPD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="upload">投稿</string>
    <string name="my_download">下载</string>
    <string name="settings">设置</string>
    <string name="share">分享</string>
    <string name="org_name">成外海报社</string>
    <string name="back_to_title">回到主界面</string>
    <string name="default_info">作者：ALPD社团</string>
    <string name="about_us">关于我们</string>
    <string name="back">返回</string>
    <string name="about_me_text">
        关于开发团队\n\n
        app作者：张寅森(千里冰封)\n
        ALPD成员、全栈工程师(iOS除外)\n
        技能：Java,Kotlin,C,common lisp,Ruby\n
        联系方式：\n
        QQ - 951394653\n
        github - ice1000\n\n
        测试工程师：张新伟 \n
        冰封友人 \n
        技能：C#, .net, VC++, C \n
        联系方式：\n
        github - iXinWei\n\n
        后台运维：何天昊\n
        ALPD成员、iOS开发\n\n
        相关链接：\n
    </string>
    <string name="refresh">刷新</string>

    <string name="title_activity_image_view">图片预览</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="download">下载图片</string>
    <string name="contact_us">联系我们</string>
    <string name="about_alpd">关于ALPD社团\n\n暂时没有内容\n\n</string>
    <string name="join_us">加入我们</string>
    <string name="ice_github">冰封的github</string>
    <string name="wei_github">张新伟的github</string>
    <string name="he_github">何天昊的github</string>
    <string name="cwoj">推广：成外OJ</string>
    <string name="app_raw_repos">APP后台资源托管</string>
    <string name="source">源码</string>
    <string name="save_pic">保存图片</string>
    <string name="saving_pic">图片正在保存中，请稍等...</string>
    <string name="failed_to_save">保存失败</string>
    <string name="succeeded_to_save">保存成功!</string>
    <string name="havent_worked_out_yet">暂未开放</string>
    <string name="still_in_developing">功能未开放，敬请期待!</string>
    <string name="refreshing">刷新中</string>
    <string name="no_">\n作品编号 No.</string>
</resources>
