<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ice1000.alpd.AboutMeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_alpd"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me_text"/>

            <TextView
                android:text="@string/ice_github"
                android:onClick="openIceGithub"
                style="@style/setting_option"/>
            <TextView
                android:text="@string/cwoj"
                android:onClick="openCWOJ"
                style="@style/setting_option"/>
            <TextView
                style="@style/setting_option"
                android:text="@string/wei_github"
                android:onClick="openWeiGithub" />
            <TextView
                style="@style/setting_option"
                android:text="@string/he_github"
                android:onClick="openHeGithub"/>
            <TextView
                style="@style/setting_option"
                android:text="@string/app_raw_repos"
                android:onClick="openAppRaw"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
