<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_backup_black_18dp"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_download" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>

</menu>
